--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,7 @@
     <string name="other_label">otro</string>
     <string name="home_title">Cambia tu vida</string>
     <string name="home_subtitle">Agenda una cita y te ayudamos con el problema al que te enfrentas</string>
+    <string name="hom_services">Nuestros Servicios</string>
+    <string name="specialist_title">Nuestras Especialidades </string>
+    <string name="specialist_subtitle">Agenda una cita con una especialidad de tu preferencia </string>
 </resources>
